# CPUPathTracing

./: .gitignore
Version1/: CMakeLists.txt  CPUPathTracing_Version1
Version1/source/: CMakeLists.txt  main.cc
Version10/Version10_1_simplebvh/: CMakeLists.txt  CPUPathTracing_Version10_1_simplebvh
Version10/Version10_2_flatten_and32union/: CMakeLists.txt  CPUPathTracing_Version10_2_flatten_and32union
Version10/Version10_2_flatten_and32union/source/: CMakeLists.txt
Version10/Version10_2_flatten_and32union/source/include/accelerate/: bvh.hpp
Version10/Version10_2_flatten_and32union/source/src/: main.cc
Version10/Version10_2_flatten_and32union/source/src/accelerate/: bvh.cc
Version10/Version10_2_flatten_and32union/source/src/shape/: plane.cc
Version10/Version10_2_flatten_and32union/source/src/util/: frame.cc
Version10/Version10_3_Debug/: CMakeLists.txt  CPUPathTracing_Version10_3_Debug
Version10/Version10_4_intersect_optimization/: CMakeLists.txt  (+1 more)
Version10/Version10_5_surface_area_heuristic/: CMakeLists.txt  CPUPathTracing_Version10_5_surface_area_heuristic
Version10/Version10_5_surface_area_heuristic/source/: CMakeLists.txt
Version10/Version10_5_surface_area_heuristic/source/include/accelerate/: bounds.hpp  bvh.hpp
Version10/Version10_5_surface_area_heuristic/source/include/renderer/: debug_renderer.hpp
Version10/Version10_5_surface_area_heuristic/source/src/: main.cc
Version10/Version10_5_surface_area_heuristic/source/src/accelerate/: bvh.cc
Version10/Version10_5_surface_area_heuristic/source/src/camera/: film.cc
Version10/Version10_5_surface_area_heuristic/source/src/renderer/: debug_renderer.cc
Version10/Version10_6_buckets_bvh_optimization/source/: CMakeLists.txt
Version10/Version10_6_buckets_bvh_optimization/source/include/accelerate/: bounds.hpp  bvh.hpp
Version10/Version10_6_buckets_bvh_optimization/source/include/camera/: ray.hpp
Version10/Version10_6_buckets_bvh_optimization/source/include/renderer/: simple_rt_renderer.hpp
Version10/Version10_6_buckets_bvh_optimization/source/src/: main.cc
Version10/Version10_6_buckets_bvh_optimization/source/src/accelerate/: bounds.cc  bvh.cc
Version10/Version10_6_buckets_bvh_optimization/source/src/thread/: thread_pool.cc
Version10/Version10_6_buckets_bvh_optimization/source/src/util/: progress.cc
Version11/: CMakeLists.txt  CPUPathTracing_Version11
Version12/: CMakeLists.txt  CPUPathTracing_Version12
Version13/: CMakeLists.txt  CPUPathTracing_Version13  Readme.md
Version2/: CMakeLists.txt  CPUPathTracing_Version2
Version2/source/: CMakeLists.txt
Version2/source/include/: film.hpp  thread_pool.hpp
Version2/source/src/: film.cc  main.cc  thread_pool.cc
Version3/: CMakeLists.txt  CPUPathTracing_Version3
Version4/: CMakeLists.txt  CPUPathTracing_Version4
Version5/: CMakeLists.txt  CPUPathTracing_Version5
Version6/: CMakeLists.txt  CPUPathTracing_Version6
Version7/: CMakeLists.txt  CPUPathTracing_Version7
Version7/source/: CMakeLists.txt
Version7/source/include/: film.hpp  ray.hpp  shape.hpp
Version7/source/src/: film.cc  frame.cc  main.cc  model.cc  scene.cc  sphere.cc  thread_pool.cc  triangle.cc
Version8/: CMakeLists.txt  CPUPathTracing_Version8
Version9/: CMakeLists.txt  CPUPathTracing_Version9
(+135 files in other folders)
